--- a/src/app/components/pagess/profile/profile-panel/advert-listes/advert-listes.component.html
+++ b/src/app/components/pagess/profile/profile-panel/advert-listes/advert-listes.component.html
@@ -11,7 +11,7 @@
   <p-table
       #dt
       [value]="adverts"
-      [globalFilterFields]="['name', 'country.name', 'representative.name']"
+      [globalFilterFields]="['advert_no', 'advert_title', 'advert_text' , 'advert_date' ]"
       [tableStyle]="{ 'min-width': '65rem' }"
       [rowHover]="true"
       dataKey="id"
@@ -21,15 +21,14 @@
 
       <ng-template pTemplate="header">
         <tr>
-            <th style="width: 4rem">
-                <p-tableHeaderCheckbox></p-tableHeaderCheckbox>
-            </th>
-            <th pSortableColumn="name" style="min-width:15rem">Ad <p-sortIcon field="name"></p-sortIcon></th>
+            <th pSortableColumn="advert_no" style="width:20%">Hayvan No <span field="advert_no"></span></th>
+            <th pSortableColumn="advert_title" style="width:20%">Hayvan Adı <span field="advert_title"></span></th>
             <th pSortableColumn="price">Görsel <p-sortIcon field="price"></p-sortIcon></th>
-            <th pSortableColumn="category" style="min-width:10rem">Kategori <p-sortIcon field="category"></p-sortIcon></th>
-            <th pSortableColumn="rating"> İlan Tarihi <p-sortIcon field="rating"></p-sortIcon></th>
-            <th pSortableColumn="sutiton">Durum <p-sortIcon field="sutiton"></p-sortIcon></th>
-            <th pSortableColumn="inventoryStatus" style="min-width:10rem">Düzenle/Sil <p-sortIcon field="inventoryStatus"></p-sortIcon></th>
+            <th pSortableColumn="advert_text" style="width:20%">Açıklama <span field="advert_text"></span></th>
+            <th pSortableColumn="advert_date" style="width:20%"> İlan Tarihi <span field="advert_date"></span></th>
+            <th pSortableColumn="category"> Kategoriler <p-sortIcon field="category"></p-sortIcon></th>
+            <th pSortableColumn="situation" style="width:20%">İlan Durumu<p-sortIcon field="situation"></p-sortIcon></th>
+            <th pSortableColumn="inventoryStatus" style="width:20%">Düzenle/Sil <span field="inventoryStatus"></span></th>
             <th></th>
         </tr>
     </ng-template>
@@ -40,11 +39,12 @@
             <td>{{ advert.advert_no }}</td>  
             <td>{{ advert.advert_title }}</td>
             <td>
-                <!-- <img [src]="'assets/images/dog.png'" width="50" class="shadow-4" /> -->
-                <!--<img [src]="'assets/images/' + advert.file_name" width="50" class="shadow-4" />  -->
+                <img [src]="'assets/images/dog.png'" width="50" class="shadow-4" />
+              <!-- <img [src]="'assets/images/' + advert.file_name" width="50" class="shadow-4" />   -->
            </td>
             <td>{{ advert.advert_text }}</td>
             <td>{{ advert.advert_date }}</td>
+            <!-- <td>{{advert-kategori}}</td> -->
             <td>{{ advert.situation }}</td>
             <td>
               <button pButton pRipple icon="pi pi-pencil" class="p-button-rounded p-button-success mr-2"></button>
@@ -109,32 +109,16 @@
                       <div class="col-12 mb-2 mt-3">
                         <span class="p-float-label">
                             <textarea name="advert_text" pInputTextarea placeholder="İlan Açıklama"  class="w-100"  style="border: solid 1px rgba(181, 181, 181, 0.267);"></textarea>
-                            <label htmlFor="advert_text">Açıklama</label>
+                            <label htmlFor="advert_text">İlan Açıklama</label>
                         </span>                   
                     </div>
-                        
-                      
-                            <!-- <span class="p-float-label">
-                                <p-inputMask  mask="999-999-9999" [(ngModel)]="registerRequest.user_gsm"  id="ssn_input" ></p-inputMask>
-                                <label htmlFor="ssn_input">Telefon numaranızı giriniz</label>
-                            </span>                      -->
+   
                         </div>
-               
-                <!-- <div class="row" >
-                    <div class="col-5 mb-2 mt-3" >
-                        <div class="dropdown-container w-100" >
-                            <p-dropdown class="w-100" name="animal_exist"  optionLabel="label" styleClass="w-100"></p-dropdown>
-                        </div>            
-                    </div>
-                    <div class="col-5 mb-2 mt-3" style="display: flex;" >
-                        <div class="dropdown-container w-100">
-                            <p-dropdown class="w-100" name="animal_history"optionLabel="label" styleClass="w-100"></p-dropdown>
-                        </div>   
-                    </div>
-                </div> -->
-               
             </form>
                     </div>
+
+
+
                     <div class="modal-footer">
                       <button type="button" class="btn" (click)="closeModalAdd()" style="width: 30%;">İptal</button>
                       <button class="btn btn-primary" type="submit" style="width: 30%;" >İlan Ekle</button>
@@ -152,45 +136,10 @@
             </td> 
           </tr>
     </ng-template>
-         
-
-
-<!--
-      <ng-template pTemplate="body">
-        <div class="card" *ngFor="let advert of adverts">
-        <tr>
-          <td>{{ advert.advert_no }}</td>
-
-          </td>
-            <img [src]="'https://primefaces.org/cdn/primeng/images/demo/product/' + product.image" [alt]="product.name" width="50" class="shadow-4" />
-          </li>
-
-          <td>{{ advert.advert_title }}</td>
-          <td>{{ advert.advert_text }}</td>
-          <td>{{ advert.advert_date }}</td>
-          <td>{{ advert.situation }}</td>
-          <td>
-            <button pButton pRipple icon="pi pi-pencil" class="p-button-rounded p-button-success mr-2"></button>
-            <span class="button-space"></span>
-            <button pButton pRipple icon="pi pi-trash" class="p-button-rounded p-button-warning"></button>
-          </td>
-        </tr>
-    </div>
-      </ng-template>
-    -->
-      
-
-      
   </p-table>
 </div>
 
-<!-- <p-dialog [(visible)]="productDialog" [style]="{ width: '450px' }" header="Pet Details" [modal]="true" styleClass="p-fluid">
-    <ng-template pTemplate="content">
-      <div class="field">
-        <label for="name">Name</label>
-        <input type="text" pInputText id="name" [(ngModel)]="product.name" required autofocus />
-        <small class="p-error" *ngIf="submitted && !product.name">Name is required.</small>
-      </div> -->
+
   <!--img ekleme-->
       <!-- <div class="field">
         <label for="image">Image</label> -->
@@ -246,8 +195,4 @@
 
 <p-confirmDialog [style]="{ width: '450px' }"></p-confirmDialog>
 
-<!--<div *ngFor="let user of users">
-    <div>
-        {{user.userName}}
-    </div>
-</div> -->
+
