--- a/src/app/components/pagess/profile/profile-panel/advert-listes/advert-listes.component.css
+++ b/src/app/components/pagess/profile/profile-panel/advert-listes/advert-listes.component.css
@@ -10,12 +10,12 @@
     width:90%;
   }
 
-  
+
 .modal {
   animation: modal-animation 0.5s ease-in-out 0s 1 normal none;
 }
   .modal.fade.show {
-    display: block; 
+    display: block;
   }
   /*display block görünmesini sağlayacak. none gizlenmesini sağlıyor.*/
 
@@ -44,4 +44,12 @@
 
 .modal-content{
   border:none;
+}
+
+.header-custom {
+
+  align-content: center;
+  width: 10%;
+  font-size:13px;
+
 }
