--- a/src/app/components/pagess/profile/profile-panel/advert-listes/advert-listes.component.html
+++ b/src/app/components/pagess/profile/profile-panel/advert-listes/advert-listes.component.html
@@ -1,34 +1,33 @@
 <!--TOOLBAR-->
 <div class="card">
     <p-toast></p-toast>
-    <p-toolbar styleClass="mb-4 gap-2">
+    <p-toolbar styleClass="">
       <ng-template pTemplate="left">
           <button  (click)="openModalAdd()" pButton pRipple label="İlan Ekle" icon="pi pi-plus" class="p-button-success mr-2 custom-button" (click)="openNew()"></button>
       </ng-template>
     </p-toolbar>
- 
+
   <!--TABLE -->
   <p-table
       #dt
       [value]="adverts"
       [globalFilterFields]="['advert_no', 'advert_title', 'advert_text' , 'advert_date' ]"
-      [tableStyle]="{ 'min-width': '65rem' }"
+      [tableStyle]="{ 'min-width': '55rem' }"
       [rowHover]="true"
       dataKey="id"
       currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
       [showCurrentPageReport]="true"
   >
 
-      <ng-template pTemplate="header">
-        <tr>
-            <th pSortableColumn="advert_no" style="width:20%">Hayvan No <span field="advert_no"></span></th>
-            <th pSortableColumn="advert_title" style="width:20%">Hayvan Adı <span field="advert_title"></span></th>
-            <th pSortableColumn="price">Görsel <p-sortIcon field="price"></p-sortIcon></th>
-            <th pSortableColumn="advert_text" style="width:20%">Açıklama <span field="advert_text"></span></th>
-            <th pSortableColumn="advert_date" style="width:20%"> İlan Tarihi <span field="advert_date"></span></th>
-            <th pSortableColumn="category"> Kategoriler <p-sortIcon field="category"></p-sortIcon></th>
-            <th pSortableColumn="situation" style="width:20%">İlan Durumu<p-sortIcon field="situation"></p-sortIcon></th>
-            <th pSortableColumn="inventoryStatus" style="width:20%">Düzenle/Sil <span field="inventoryStatus"></span></th>
+      <ng-template pTemplate="header" style="min-width: 50rem">
+        <tr class="header-custom">
+          <th pSortableColumn="advert_title" >Hayvan Adı <span field="advert_title"></span></th>
+          <th pSortableColumn="price" >Görsel</th>
+          <th pSortableColumn="advert_text" >Açıklama <span field="advert_text"></span></th>
+            <th pSortableColumn="advert_date" > İlan Tarihi <span field="advert_date"></span></th>
+            <th pSortableColumn="category" > Kategoriler <p-sortIcon field="category"></p-sortIcon></th>
+            <th pSortableColumn="situation">İlan Durumu<p-sortIcon field="situation"></p-sortIcon></th>
+            <th pSortableColumn="inventoryStatus" >Düzenle/Sil <span field="inventoryStatus"></span></th>
             <th></th>
         </tr>
     </ng-template>
@@ -36,12 +35,12 @@
 
     <ng-template pTemplate="body">
         <tr *ngFor="let advert of adverts">
-            <td>{{ advert.advert_no }}</td>  
             <td>{{ advert.advert_title }}</td>
             <td>
-                <img [src]="'assets/images/dog.png'" width="50" class="shadow-4" />
-              <!-- <img [src]="'assets/images/' + advert.file_name" width="50" class="shadow-4" />   -->
-           </td>
+           <!--     <img [src]="'assets/images/dog.png'" width="50" class="shadow-4" />
+              <img [src]="'assets/images/' + advert.file_name" width="50" class="shadow-4" />
+           </td> -->
+           <td>{{ advert.advert_date }}</td>
             <td>{{ advert.advert_text }}</td>
             <td>{{ advert.advert_date }}</td>
             <!-- <td>{{advert-kategori}}</td> -->
@@ -81,28 +80,28 @@
                     </div>
                     <div class="modal-body">
                       <form  ngModelOptions="{standalone: true}">
-                    
-                    
+
+
                         <div class="row" >
                                 <div class="col-6 mb-2 mt-3">
                                     <span class="p-float-label">
                                         <input name="advert_title" pInputText placeholder="Hayvan adı giriniz"  class="w-100"  style="border: solid 1px rgba(181, 181, 181, 0.267);"/>
                                         <label htmlFor="advert_title">Hayvan Adı</label>
-                                    </span>   
+                                    </span>
                                 </div>
-                                <div class="col-6 mb-2 mt-3"  >   
+                                <div class="col-6 mb-2 mt-3"  >
                                   <span class="p-float-label">
                                       <input name="advert_date" pInputText  class="w-100"  style="border: solid 1px rgba(181, 181, 181, 0.267);"/>
                                       <label htmlFor="advert_date">İlan Tarihi</label>
-                                  </span>  
+                                  </span>
                               </div>
-                        </div>             
+                        </div>
                       <div class="row" >
                             <div class="col-6 mb-2 mt-3" style="display: flex;" >
                               <div class="dropdown-container w-100">
                                   <p-dropdown class="w-100" name="animal_history"  [options]="StatusOptions" optionLabel="label" styleClass="w-100"></p-dropdown>
-                              </div>   
-                          </div>            
+                              </div>
+                          </div>
                     </div>
 
                     <div class="row" >
@@ -110,9 +109,9 @@
                         <span class="p-float-label">
                             <textarea name="advert_text" pInputTextarea placeholder="İlan Açıklama"  class="w-100"  style="border: solid 1px rgba(181, 181, 181, 0.267);"></textarea>
                             <label htmlFor="advert_text">İlan Açıklama</label>
-                        </span>                   
+                        </span>
                     </div>
-   
+
                         </div>
             </form>
                     </div>
@@ -126,14 +125,7 @@
                   </div>
                 </div>
               </div>
-
-
-
-
-              <!-- 
-                backend'den id'yi çekemediğimiz için id'yi tespit edemedi frontend kısmında :) aklımızdao lsun. swaggerda getall'da id yi çekemedik :D
-              -->
-            </td> 
+            </td>
           </tr>
     </ng-template>
   </p-table>
@@ -184,7 +176,7 @@
 
       <div class="formgrid grid">
       </div>
-      
+
   </ng-template>
 
   <ng-template pTemplate="footer">
