--- a/src/app/components/pagess/profile/profile-panel/categories-listes/categories-listes.component.html
+++ b/src/app/components/pagess/profile/profile-panel/categories-listes/categories-listes.component.html
@@ -17,8 +17,44 @@
         
           <div class="table-header">
             <div style="display: flex; justify-content: flex-end; gap: 14px;">
-              <button pButton type="button" class="p-button-success" icon="pi pi-plus"></button>
+              <button pButton type="button" class="p-button-success" icon="pi pi-plus" (click)="showDialog()"></button>
+              
+              <p-dialog header="Header" [(visible)]="visible" [style]="{ width: '50vw' }">
+                
+                <ng-template pTemplate="header">
+                    <span class="text-xl font-bold">Kategori
+                    </span>
+                </ng-template>
+               
+                    
+                                                
+                        <div>
+                            <span class="p-float-label">
+                                <input pInputText id="catid" [(ngModel)]="categoryRequest.id" />
+                                <label htmlFor="catid">id</label>
+                            </span>
+                        </div>
+                        <div>
+                            <span class="p-float-label">
+                                <input pInputText id="catname" [(ngModel)]="categoryRequest.category_name">
+                                <label htmlFor="catname">Kategori</label>
+                            </span>
+                        </div>
+                        <div>
+                            <span class="p-float-label">
+                                <input pInputText id="catimg" [(ngModel)]="categoryRequest.category_img">
+                                <label htmlFor="catimg">resim</label>
+                            </span>
+                        </div>
+               
+                <ng-template pTemplate="footer">
+                    <p-button icon="pi pi-check"  styleClass="p-button-text" (click)="onCreate(categoryRequest)"></p-button>
+                </ng-template>
+            </p-dialog>
             </div>
+
+            
+
           </div>
         
       </ng-template>
@@ -56,20 +92,11 @@
                 </td>
 
                 <td>
-                    <p-button icon="pi pi-times" styleClass="p-button-rounded p-button-danger p-button-text" (onClick)="onDelete"></p-button>
+                    <p-button icon="pi pi-times" styleClass="p-button-rounded p-button-danger p-button-text" (click)="onDelete(category.id)"></p-button>
                 </td>
                
                 
             </tr>
         </ng-template>
         
-    </p-table>
-    <div *ngFor=" let category of categories" style="background-color: aqua;">
-        <div>
-            {{category.category_name }}
-            {{category.category_img }}
-
-        </div>
-    </div>
-</div>
 
