card back and new cars

--- a/src/app/components/pagess/profile/profile-panel/advert-listes/advert-listes.component.html
+++ b/src/app/components/pagess/profile/profile-panel/advert-listes/advert-listes.component.html
@@ -101,8 +101,13 @@
                               <input name="advert_no" [(ngModel)]="advertRequest.advert_no" pInputText  class="w-100"  style="border: solid 1px rgba(181, 181, 181, 0.267);"/>
                               <label htmlFor="advert_no">İlan No</label>
                           </span>  
-                       
-                        </div>   
+                          </div>   
+                          <div class="col-6 mb-2 mt-3" style="display: flex;" >
+                            <span class="p-float-label">
+                              <input name="advert_img" [(ngModel)]="advertRequest.advert_img" pInputText  class="w-100"  style="border: solid 1px rgba(181, 181, 181, 0.267);"/>
+                              <label htmlFor="advert_img">Resim yolu</label>
+                          </span>  
+                          </div>  
        
                       </div>
 
