--- a/src/app/components/pagess/profile/profile-panel/users-info-listes/users-info-listes.component.html
+++ b/src/app/components/pagess/profile/profile-panel/users-info-listes/users-info-listes.component.html
@@ -12,38 +12,26 @@
               </div>
             </div>
           </div>
-          <div class="card-body">
+          <div class="card-body" >
             <form>
               <h6 class="heading-small text-muted mb-4">Kullanıcı Bilgileri</h6>
               <div class="pl-lg-4">
-                <div class="row">
-                  <div class="col-lg-6">
-                    <div class="form-group focused">
-                      <label class="form-control-label" for="input-username">Kullanıcı Adı</label>
-                      <input type="text" id="input-username" class="form-control form-control-alternative" placeholder="Kullanıcı Adın" value=""  [disabled]="!isEditing ">
-                    </div>
-                  </div>
-                  <div class="col-lg-6">
-                    <div class="form-group focused">
-                      <label class="form-control-label" for="input-email">E-mail adresi</label>
-                      <input type="email" id="input-email" class="form-control form-control-alternative" placeholder="petship@example.com" value=""  [disabled]="!isEditing">
-                    </div>
+                <div class="row"><div class="col-lg-6">
+                  <div class="form-group focused">
+                    <label class="form-control-label" for="input-first-name">Ad</label>
+                    <input type="text" id="input-first-name" class="form-control form-control-alternative" placeholder="Adın" value="" [disabled]="!isEditing">
                   </div>
                 </div>
+                <div class="col-lg-6">
+                  <div class="form-group focused">
+                    <label class="form-control-label" for="input-last-name">Soyadı</label>
+                    <input type="text" id="input-last-name" class="form-control form-control-alternative" placeholder="Soyadın" value="" [disabled]="!isEditing">
+                  </div>
+                </div>
+                </div>
                 <div class="row">
-                  <div class="col-lg-6">
-                    <div class="form-group focused">
-                      <label class="form-control-label" for="input-first-name">Ad</label>
-                      <input type="text" id="input-first-name" class="form-control form-control-alternative" placeholder="Adın" value="" [disabled]="!isEditing">
-                    </div>
-                  </div>
-                  <div class="col-lg-6">
-                    <div class="form-group focused">
-                      <label class="form-control-label" for="input-last-name">Soyadı</label>
-                      <input type="text" id="input-last-name" class="form-control form-control-alternative" placeholder="Soyadın" value="" [disabled]="!isEditing">
-                    </div>
-                  </div>
-                  <div  class="col-lg-3">
+
+                  <div  class="col-lg-6">
                     <div class="form-group focused">
                       <label class="form-control-label" for="input-last-name">Doğum Tarihiniz</label>
                       <input type="text" id="input-last-name" class="form-control form-control-alternative" placeholder="Örnek giriş :''03.05.2000'' " value="" [disabled]="!isEditing">
