--- a/src/app/components/pagess/profile/profile-panel/users-listes/users-listes.component.html
+++ b/src/app/components/pagess/profile/profile-panel/users-listes/users-listes.component.html
@@ -18,16 +18,15 @@
   >
 
       <ng-template pTemplate="header">
-        <tr>
+        <tr class="header-custom" >
             <th style="width: 4rem">
-                <p-tableHeaderCheckbox></p-tableHeaderCheckbox>
             </th>
-            <th pSortableColumn="name" style="min-width:5rem">Ad <p-sortIcon field="name"></p-sortIcon></th>
-            <th pSortableColumn="price">Soyad <p-sortIcon field="price"></p-sortIcon></th>
-            <th pSortableColumn="mail">E-posta <p-sortIcon field="mail"></p-sortIcon></th>
-            <th pSortableColumn="category" style="min-width:8rem">Doğum Tarihi <p-sortIcon field="category"></p-sortIcon></th>
-            <th pSortableColumn="rating">Sahiplenme Geçmişi <p-sortIcon field="rating"></p-sortIcon></th>
-            <th pSortableColumn="sutiton">Aktif hayvan <p-sortIcon field="sutiton"></p-sortIcon></th>
+            <th pSortableColumn="name" style="min-width:5rem">Ad </th>
+            <th pSortableColumn="price">Soyad </th>
+            <th pSortableColumn="mail">E-posta </th>
+            <th pSortableColumn="category" style="min-width:8rem">Doğum Tarihi </th>
+            <th pSortableColumn="rating">Sahiplenme Geçmişi</th>
+            <th pSortableColumn="sutiton">Aktif hayvan </th>
             <th pSortableColumn="inventoryStatus" style="min-width:10rem">Düzenle/Sil </th>
             <th></th>
         </tr>
