--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -1,134 +1,193 @@
 
-/* FOOTER */ /*Pes ediyorum*/
 .footer {
-  background-color: #f8f9fa;
-  font-family: 'Roboto', sans-serif;
-  display: flex;
-   justify-content: space-around; 
-   align-items: center ; 
-   padding: 50px 100px 50px 100px;
+  background: linear-gradient(rgba(4, 44, 17, 0.7),#27a571), url("https://images.app.goo.gl/bFU95v4m5cSSXtcP9");
+  background-size: cover;
+  margin-top: 90px;
 }
 
-.footer h4 {
-  color: #333;
-  font-size: 18px;
-  font-weight: bold;
-  margin-top: 0;
+
+
+.first {
+  margin-top: 40px;
+  margin-bottom: 30px;
+  color: rgb(206,206,206);
+  font-family: 'Poppins', sans-serif;
 }
 
-.footer p {
-  color: #666;
-  font-size: 14px;
-  line-height: 1.5;
-  margin-bottom: 10px;
-  width: 80%;
-}
+  .first h4 {
+      font-size: 20px;
+      letter-spacing: 3px;
+      position: relative;
+      margin-bottom: 20px;
+      font-size: 1.6em;
+      color: #fff;
+      padding-bottom: 0.5em;
+  }
 
-.footer .row {
-  margin-bottom: 20px;
-}
+      .first h4::after {
+          content: '';
+          background: #eee;
+          width: 20%;
+          height: 2px;
+          position: absolute;
+          bottom: 0;
+          left: 0;
+      }
 
-.footer .col-md-12 {
-  margin-top: 20px;
-}
+  .first p {
+      font-size: 14px;
+  }
 
-.footer .text-center {
+.second {
+  margin-top: 40px;
+  margin-bottom: 30px;
+  color: rgb(206,206,206);
+  font-family: 'Poppins', sans-serif;
   text-align: center;
-  color: #888;
-  font-size: 12px;
 }
 
+.second2 {
+  margin-top: 40px;
+  margin-bottom: 30px;
+  color: rgb(206,206,206);
+  font-family: 'Poppins', sans-serif;
+  text-align: center;
+}
 
-
-.social-media li a {
-  text-decoration: none;
-} 
-.social-media {
-  list-style: none;  
-  display: flex;
-  justify-content: space-between;
-  list-style: none;
-  padding: 0;
+.second h4 {
+  font-size: 20px;
+  letter-spacing: 3px;
+  position: relative;
   margin-bottom: 20px;
-  width: 90%;
+  font-size: 1.6em;
+  color: #fff;
+  padding-bottom: 0.5em;
 }
 
+  .second h4::after {
+      content: '';
+      background: #eee;
+      width: 30%;
+      height: 2px;
+      position: absolute;
+      bottom: 0;
+      left: 35%;
+  }
 
 
-.social-media img {
-  width: 30%;
-}
-
-.quick-links {
+.second li {
   list-style: none;
-  padding: 15;
-  text-align: left;
-  width: 55%;
-  height: 50%;
-  float: left;
-  margin-left: auto;
+  padding-bottom: 30px;
 }
 
-.quick-links li {
-  display: inline;
-  margin: 0 10px;
-}
-
-.quick-links li a {
+.second a, .second2 a {
+  color: rgb(206, 206, 206);
   text-decoration: none;
-  color: #666;
-  font-size: 24px;
-  margin-left: left;
+  letter-spacing: 3px;
+  font-weight: bold;
+  font-size: 14px;
+  transition: 0.2s;
 }
 
-.quick-links li a:hover {
-  color: #333;
-}
-.list{
-  display: flex;   
-  list-style: none;  
-  justify-content: space-between;
-}
+  .second a:hover, .second2 a:hover {
+      color: #fff;
+      transition: 0.2s;
+      text-shadow: 1px 1px 20px rgba(0,0,0,1);
+      text-decoration: none
 
-.list li a {
-  text-decoration: none;
-  color: #333;
-}
+  }
 
-.modal-content {
-  display: flex;
-  align-items: center;
-  width: auto;
-  max-width: 100%;
-  height: auto;
-  max-height: 80vh;
-  
-}
 
-.modal-content #modalContent {
-  display: flex;
-  align-items: center;
-}
 
-.modal-content #modalContent img {
-  width: 50%;
-  margin-right: 10px;
-  overflow-y: auto;
-  overflow-x: auto;
-  position:relative;
-  top: 0;
-}
-
-.modal-image
-{
-  top: 0;
-  left: 0;
+.third {
+  margin-top: 40px;
+  margin-bottom: 30px;
+  color: rgb(206,206,206);
+  font-family: 'Poppins', sans-serif;
+  text-align: right;
 }
 
 
+  .third h4 {
+      font-size: 20px;
+      letter-spacing: 3px;
+      position: relative;
+      margin-bottom: 20px;
+      font-size: 1.6em;
+      color: #fff;
+      padding-bottom: 0.5em;
+  }
 
-.modal-content #modalContent .text-container {
-  width: 50%;
+
+      .third h4::after {
+          content: '';
+          background: #eee;
+          width: 20%;
+          height: 2px;
+          position: absolute;
+          bottom: 0;
+          left: 80%;
+      }
+
+
+
+  .third li {
+      list-style: none;
+      padding-bottom: 15px;
+  }
+
+
+  .third a {
+      color: rgb(206, 206, 206);
+      text-decoration: none;
+      letter-spacing: 3px;
+      font-weight: bold;
+      font-size: 14px;
+      transition: 0.2s;
+  }
+
+
+      .third a:hover {
+          color: #fff;
+          transition: 0.2s;
+          text-shadow: 1px 1px 20px rgba(0,0,0,1);
+      }
+
+
+@media screen and (max-width:1000px) {
+  .first {
+      text-align: center;
+  }
+
+      .first h4::after {
+          left: 40%;
+      }
+}
+
+@media screen and (max-width:1000px) {
+  .third {
+      text-align: center;
+  }
+
+      .third h4::after {
+          left: 40% !important;
+      }
+}
+
+.margin {
+  margin-left: 20px;
+}
+
+.line {
+  height:2px;
+  background-color:rgb(206,206,206);
+  width:100%;
+}
+
+.container h1{
+  text-align:center;
+  margin-top:100px;
+  margin-bottom:100px;
 }
 
 
@@ -154,3 +213,7 @@
   
   
 }
+
+
+
+
