--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,25 +1,52 @@
-  <!-- navbar -->
-  <nav class="navbar navbar-expand-lg " style="background-color: #4BA47E; padding: 0px;">
-    <div class="container">
-      <a class="navbar-brand" routerLinkActive="/" href="/">
-        <img src="assets/images/petship-logo.png" alt="Logo" width="70" height="70" class="d-inline-block align-text-top">
-      </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link active" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show" (click)="scrollToSection('about')">Hakkımızda</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" routerLink="/login" routerLinkActive="active" aria-current="page" href="#" >Profilim</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show" (click)="scrollToSection('contact')">İletişim</a>
-          </li>
-          <p-avatar icon="pi pi-user" styleClass="mr-2" shape="circle"></p-avatar>
-        </ul>
+<div>
+  <div class="header-blue">
+    <nav class="navbar navbar-expand-lg navbar navbar-light " style=" padding: 0px; height: 70px;">
+      <div class="container">
+        <a class="navbar-brand" routerLinkActive="/" href="/">
+          PETSHİP
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
+          <ul class="navbar-nav" >
+            <li class="nav-item">
+              <a class="nav-link active" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show" (click)="scrollToSection('about')" >Hakkımızda</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" routerLink="/login" routerLinkActive="active" aria-current="page" href="#" >Profilim</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show" (click)="scrollToSection('contact')">İletişim</a>
+            </li>
+            <p-avatar icon="pi pi-user" styleClass="mr-2" shape="circle"></p-avatar>
+          </ul>
+        </div>
       </div>
+    </nav>
+      <div class="container hero">
+        <div class="row">
+            <div class="col-12 col-lg-6 col-xl-5 offset-xl-1">
+                <h4>En Yakın Arkadaşınızı Bulun</h4>
+                <p> En yakın arkadaşınızı Petship aracılığı ile güven içinde sahiplenmek için ilanlara göz atın bir dost edinin.<br></p>
+                <button (click)="scrollToSection('contact')"
+                    class="btn btn-light btn-lg action-button" type="button">İletişim için<i class="fa fa-long-arrow-right ml-2"></i></button>
+            </div>
+            <div class="col-md-5 col-lg-5 offset-lg-1 offset-xl-0 d-none d-lg-block phone-holder">
+                <div class="iphone-mockup">
+                  <div class="device"  #lottieContainer>
+                    
+                  </div>
+                  <!--  <div class="screen">
+      </div>
+      
+      -->
+                </div>
+            </div>
+        </div>
     </div>
-  </nav>
+
+
+     
+  </div>
+</div>
