--- a/src/app/components/pagess/homee/homepage.component.html
+++ b/src/app/components/pagess/homee/homepage.component.html
@@ -12,7 +12,7 @@
 
 <app-kategori></app-kategori>
  <!-- kategorielr -->
- <div class=" container">
+ <div class=" container" style="margin-top: 30px;">
     <div class="text-center " style=" margin-bottom: 40px;">
       <h1 style="margin-bottom: 40px; font-style: italic;">Kategoriler </h1>
       <i class="fas fa-heart fa-2x"></i>
