--- a/src/app/components/pagess/profile/profile.component.html
+++ b/src/app/components/pagess/profile/profile.component.html
@@ -1,6 +1,28 @@
-<app-navbar></app-navbar>
+<!-- <app-navbar></app-navbar> -->
+<div class="header-blue">
 
-
+  <nav class="navbar navbar-expand-lg navbar navbar-light " style=" padding: 0px; height: 70px;">
+    <div class="container">
+      <a class="navbar-brand" routerLinkActive="/" href="/">
+        PETSHİP
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
+        <ul class="navbar-nav" >
+          <li class="nav-item">
+            <a class="nav-link active" routerLink="/login" routerLinkActive="active" aria-current="page" href="#" >Profilim</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show" (click)="scrollToSection('contact')">İletişim</a>
+          </li>
+          <p-avatar icon="pi pi-user" styleClass="mr-2" shape="circle"></p-avatar>
+        </ul>
+      </div>
+    </div>
+  </nav>
+</div>
 
 <!-- burası profil componenti -->
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
