--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -1,5 +1,5 @@
 .header-blue {
-  background: linear-gradient(135deg,#68b997, #158f5a);
+  background: linear-gradient(135deg,#6ec5a1, #0c5d3a);
   background-color: #184e8e;
   padding-bottom: 5px;
   font-family: 'Source Sans Pro', sans-serif;
