--- a/src/app/components/pagess/homee/homepage.component.html
+++ b/src/app/components/pagess/homee/homepage.component.html
@@ -1,6 +1,5 @@
   <!-- navbar -->
 <div id="home">
-
   <app-navbar></app-navbar>
 </div>
 
@@ -20,8 +19,8 @@
 
     <div class="row d-flex justify-content-center mb-3 kategori-butonlar">
       <div class="col-3  " *ngFor="let category of categories">
-        <div class="rounded-left d-flex justify-content-center">
-          <img src={{category.category_img}} class="mr-2 btn-img rounded-circle bg-image hover-zoom">
+        <div class="rounded-left d-flex justify-content-center  ">
+          <img src={{category.category_img}} class=" btn-img mr-2  rounded-circle bg-image hover-zoom">
         </div>
       </div>
     </div>
