--- a/src/app/components/pagess/profile/profile-panel/users-listes/users-listes.component.html
+++ b/src/app/components/pagess/profile/profile-panel/users-listes/users-listes.component.html
@@ -1,5 +1,5 @@
 <!--TOOLBAR-->
-<div class="card">
+<div class="card" style="box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;">
     <p-toast></p-toast>
     <p-toolbar styleClass="mb-4 gap-2">
     </p-toolbar>
