--- a/src/app/components/pagess/profile/profile.component.css
+++ b/src/app/components/pagess/profile/profile.component.css
@@ -287,7 +287,8 @@ body {
 
 .profile-nav .user-heading {
 
-  background: #4BA47E;
+  background: linear-gradient(135deg,#68b997, #158f5a);
+  background-color: #184e8e;
 
   color: #fff;
 
@@ -296,7 +297,7 @@ body {
   padding: 3%;
 
   text-align: center;
-
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 }
 
 
@@ -425,11 +426,6 @@ body {
   color: #89817f !important;
 
   margin-right: 1px;
-
-
-
-
-
 }
 
 
@@ -635,20 +631,20 @@ body {
 
 .bio-graph-heading {
 
-  background: #4BA47E;
-
+  background: linear-gradient(135deg,#68b997, #158f5a);
+  background-color: #184e8e;
   padding: 30px 80px;
-
   border-radius: 8px 8px  8px 8px ;
-
-}
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+  display: flex; align-items: center; justify-content: center;
+} 
 
 .bio-graph-heading h4{
 
   float: none;
-
   text-align: center;
-
+  font-size: 20px;
+  margin: 0 !important;
 }
 
 
@@ -1603,9 +1599,6 @@ ul.summary-list > li:last-child  {
   opacity: 1;
 
 }
-
-
-
 
 
 
