--- a/src/app/components/pagess/profile/profile.component.html
+++ b/src/app/components/pagess/profile/profile.component.html
@@ -41,13 +41,13 @@
               <li class="active" ><a  (click)="changeContent('home')" > <i class="fa fa-user"></i> Kişisel Bilgiler</a></li>
               <li ><a (click)="changeContent('advert')"> <i class="fa fa-edit mt-3"></i> İlanlar</a></li>
               <li ><a (click)="changeContent('categories')"> <i class="fa fa-edit mt-3"></i> Kategoriler</a></li>
-              <li ><a (click)="changeContent('users')"> <i class="fa fa-edit mt-3"></i> Kullanıcılar</a></li>
+              <li ><a (click)="changeContent('users')"> <i class="fa fa-users mt-3"></i> Kullanıcılar</a></li>
           </ul>
       </div>
   </div>
   <div class=" profile-info col-md-9">
       <div class="panel">
-          <div class="bio-graph-heading mb-3" >
+          <div class="bio-graph-heading" >
             <h4  id="home" *ngIf="currentContent === 'home'">Kişisel Bilgiler</h4>
             <h4  id="advert" *ngIf="currentContent === 'advert'"> İlanlar</h4>
             <h4  id="categories" *ngIf="currentContent === 'categories'"> Kategoriler</h4>
