--- a/src/app/components/pagess/profile/profile.component.html
+++ b/src/app/components/pagess/profile/profile.component.html
@@ -28,26 +28,45 @@
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
 <div class=" bootstrap snippets bootdey" style="padding: 20px 50px 200px 50px;">
 <div class="row">
-  <div class="profile-nav col-md-3">
-      <div class="panel">
-          <div class="user-heading round" *ngIf="currentUser">
-              <a href="#">
-                  <img src="https://bootdey.com/img/Content/avatar/avatar3.png" alt="">
+  <div class="col-md-3 col-sm-4" >
+      <div class="user-panelbar">
+          <div *ngIf="currentUser">
+             <div class="user-infos">
+              <a href="#" class="mb-2">
+                <img src="assets/images/yılan1.png" alt="" >
               </a>
-              <h2 > {{currentUser.userName}} </h2>
+              <h3 > {{currentUser.userName}} </h3>
               <p> {{currentUser.email}} </p>
+             </div>
+             <div style="display: flex; justify-content: space-between; color: #fff;">
+              <hr style="width: 100px;">
+              <i class="fas fa-heart fa-lg" style="display: flex; align-items: center;"></i>
+              <hr style="width: 100px;"></div>
+
+             <div class="col-12 panelink mt-4">
+              <ul>
+                <li [ngClass]="{ 'active': currentContent === 'home' }" (click)="changeContent('home')">Kişisel Bilgiler
+                  <span></span><span></span><span></span><span></span>
+                </li>
+                <li [ngClass]="{ 'active': currentContent === 'advert' }" (click)="changeContent('advert')">İlanlar
+                  <span></span><span></span><span></span><span></span>
+                </li>
+                <li [ngClass]="{ 'active': currentContent === 'categories' }" (click)="changeContent('categories')">Kategoriler
+                  <span></span><span></span><span></span><span></span>
+                </li>
+                <li [ngClass]="{ 'active': currentContent === 'users' }" (click)="changeContent('users')">Kullanıcılar
+                  <span></span><span></span><span></span><span></span>
+                </li>
+              </ul>
+            </div>
+            
           </div>
-          <ul class="nav nav-pills nav-stacked" >
-              <li class="active" ><a  (click)="changeContent('home')" > <i class="fa fa-user"></i> Kişisel Bilgiler</a></li>
-              <li ><a (click)="changeContent('advert')"> <i class="fa fa-edit mt-3"></i> İlanlar</a></li>
-              <li ><a (click)="changeContent('categories')"> <i class="fa fa-edit mt-3"></i> Kategoriler</a></li>
-              <li ><a (click)="changeContent('users')"> <i class="fa fa-users mt-3"></i> Kullanıcılar</a></li>
-          </ul>
+        
       </div>
   </div>
-  <div class=" profile-info col-md-9">
+  <div class=" profile-info col-md-9 col-sm-8">
       <div class="panel">
-          <div class="bio-graph-heading" >
+          <div class="bio-graph-heading mb-3" >
             <h4  id="home" *ngIf="currentContent === 'home'">Kişisel Bilgiler</h4>
             <h4  id="advert" *ngIf="currentContent === 'advert'"> İlanlar</h4>
             <h4  id="categories" *ngIf="currentContent === 'categories'"> Kategoriler</h4>
@@ -86,3 +105,4 @@
 
  <!-- footer -->
 <app-footer></app-footer>
+
